argo/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: custom-errors
spec:
  errors:
    status:
      - "400-599"
    query: /{status}
    service:
      name: custom-errors
      port: 80
