argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-errors
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: custom-errors
