argo/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: errors-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host("errors.thurlow.house")
      kind: Rule
      services:
      - name: whoami
        port: 80
